--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -229,7 +229,7 @@
 }
 
 .e-golf-desc .intersect {
-  transform: translateX(20px);
+  transform: translateX(5px);
   transition: 0.7s ease;
   opacity: 0;
 }
